package dev.kaldiroglu.dp.structural.simpler.composite.solution;

public class File implements FileSystemNode {

    private final String name;
    private final long size;

    public File(String name, long size) {
        this.name = name;
        this.size = size;
    }

    @Override
    public String getName() { return name; }

    @Override
    public long getSize() { return size; }
}
