package dev.kaldiroglu.dp.structural.simpler.composite.solution;

public interface FileSystemNode {
    String getName();
    long getSize();
}
